fix border alignment in theater overview mode
Due to a bug in the viewer style sheet, the borders of thumbnails were
positioned inside the grid cell, not outside, causing the thumbnail to be
resized when the border is switched on or off.

--- a/nutils/_log/viewer.css
+++ b/nutils/_log/viewer.css
@@ -81,7 +81,7 @@ body.hide4 #log [data-loglevel='4'] { display: none; }
 body:not([data-show='theater']) #theater { display: none; }
 
 #theater img.plot { object-fit: contain; width: 100%; height: 100%; }
-#theater.overview img.plot { background: white; max-width: 100%; max-height: 100%; width: initial; height: initial; box-sizing: border-box; }
+#theater.overview img.plot { background: white; max-width: 100%; max-height: 100%; width: initial; height: initial; }
 #theater.overview img.plot.selected { border: 2px solid #888; }
 body.theater-locked #theater.overview img.plot.selected_category:not(.selected) { border: 2px solid #ddd; }
 
